CPT-138 #added new admin routes
